<resources>
    <string name="app_name">Cafe</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="user_name">Имя пользователя</string>
    <string name="password_user">Пароль</string>
    <string name="sign_on_button">Войти</string>
    <string name="greenigns">Привет, %s! Что желаете выпить?</string>
    <string name="tea">Чай</string>
    <string name="cofe">Кофе</string>
    <string name="sugar">Сахар</string>
    <string name="milk">Молоко</string>
    <string name="lemon">Лимон</string>
    <string name="error_empty">Заполните пустые поля</string>
    <string name="what_add_user">Что добавить в ваш %s?</string>
    <string name="type_drink">Выберите тип напитка</string>
    <string name="createzakaz">Сделать заказ</string>
    <string name="name">Имя:</string>
    <string name="drink">Напиток:</string>
    <string name="drinkType">Тип напитка:</string>
    <string name="additivies2">Добавки:</string>
    <array name="typesoftea">
        <item>Зеленый</item>
        <item>Черный</item>
    </array>
    <array name="typesofcofe">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </array>

</resources>