<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E2651"
    tools:context=".MakeOdredActivity">

    <TextView
        android:id="@+id/textViewgreetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/greenigns"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radiogroupDrinks"
        app:layout_constraintTop_toTopOf="parent"
         />

    <RadioGroup
        android:id="@+id/radiogroupDrinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textViewAdditives"
        app:layout_constraintTop_toBottomOf="@+id/textViewgreetings">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/tea"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonCofe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/cofe"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewAdditives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/what_add_user"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkboxMilk"
        app:layout_constraintTop_toBottomOf="@+id/radiogroupDrinks"
        />

    <CheckBox
        android:id="@+id/checkboxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/sugar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/checkboxMilk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditives" />

    <CheckBox
        android:id="@+id/checkboxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/milk"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewTypeDrinks"
        app:layout_constraintEnd_toStartOf="@id/checkboxLemon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/checkboxSugar"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdditives" />

    <CheckBox
        android:id="@+id/checkboxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/lemon"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkboxMilk"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditives" />

    <TextView
        android:id="@+id/textViewTypeDrinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/type_drink"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTea"
        app:layout_constraintTop_toBottomOf="@+id/checkboxMilk"
        />

    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="invisible"
        android:entries="@array/typesoftea"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreateZakaz"
        app:layout_constraintTop_toBottomOf="@+id/textViewTypeDrinks"
       />

    <Spinner
        android:id="@+id/spinnerCofe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:visibility="visible"
        android:entries="@array/typesofcofe"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreateZakaz"
        app:layout_constraintTop_toBottomOf="@+id/textViewTypeDrinks" />

    <Button
        android:id="@+id/buttonCreateZakaz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/createzakaz"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTea"
        />


</androidx.constraintlayout.widget.ConstraintLayout>