<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E2651"
    android:orientation="vertical"
    tools:context=".MainActivity">


  <ImageView
      android:id="@+id/imageViewCafe"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:adjustViewBounds="true"
      android:layout_weight="1"
      app:srcCompat="@drawable/icon_afe" />

  <TextView
      android:id="@+id/welcomeCafe"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/welcome"
      android:padding="16dp"
      android:textColor="@color/black"
      android:textSize="24sp"
      android:textStyle="bold" />

  <EditText
      android:id="@+id/editTextName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textCapWords"
      android:hint="@string/user_name"
      android:padding="16dp"
      android:textColorHint="@color/black"
      android:textSize="24sp"
      android:layout_margin="20dp"
      />
  <EditText
      android:id="@+id/editTextpassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:hint="@string/password_user"
      android:padding="16dp"
      android:textColorHint="@color/black"
      android:textSize="24sp"
      android:layout_marginBottom="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginStart="20dp"
      />
  <Button
      android:id="@+id/buttonActivityPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sign_on_button"
      android:layout_marginBottom="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginStart="20dp"/>

</LinearLayout>