<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="48sp"
        android:layout_margin="24dp"/>
    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Имя:"
        android:textSize="48sp"
        android:layout_margin="24dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drink"
        android:textSize="48sp"
        android:layout_margin="24dp"/>
    <TextView
        android:id="@+id/textViewDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Имя:"
        android:textSize="48sp"
        android:layout_margin="24dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drinkType"
        android:textSize="48sp"
        android:layout_margin="24dp"/>
    <TextView
        android:id="@+id/textViewTypeDrinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Имя:"
        android:textSize="48sp"
        android:layout_margin="24dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additivies2"
        android:textSize="48sp"
        android:layout_margin="24dp"/>
    <TextView
        android:id="@+id/textViewAdditives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Имя:"
        android:textSize="48sp"
        android:layout_margin="24dp"/>

    </LinearLayout>
</ScrollView>